--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -27,16 +27,16 @@
             <div class="collapse navbar-collapse" id="main-nav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a href="~/Organization/VolunteerManagement" class="nav-link">Volunteer Management</a>
+                        <a class="nav-link"  href="#dashboard" onclick="showSection('dashboard')">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Organization/EventsManagement" class="nav-link">Programs/Events Management</a>
+                        <a class="nav-link"  href="#event-creation" onclick="showSection('event-creation')">Create Event</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Organization/DonationsManagement" class="nav-link">Donations</a>
+                        <a class="nav-link"  href="#event-list" onclick="showSection('event-list')">Event List</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Organization/ReportsManagement" class="nav-link">Reports</a>
+                        <a class="nav-link"  href="#scheduling-calendar" onclick="showSection('scheduling-calendar')">Reports/History</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
