--- a/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
@@ -85,23 +85,6 @@
 </style>
 
 <div class="container">
-    <!-- Sub Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse navbar-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#dashboard" onclick="showSection('dashboard')">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#event-creation" onclick="showSection('event-creation')">Event Creation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#event-list" onclick="showSection('event-list')">Event List</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#scheduling-calendar" onclick="showSection('scheduling-calendar')">Scheduling and Calendar</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <!-- Content Sections -->
     <div class="container">
         <!-- Overview/Dashboard -->
@@ -176,6 +159,12 @@
         <div id="event-list" class="mb-4 content-section">
             <div class="card-header">Event List</div>
             <div class="card-body">
+                <div class="mb-3">
+                    <button type="button" class="btn btn-sm btn-success delete-button">Create Event</button>
+                </div>
+                <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Search" />
+                </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-hover">
                         <thead class="table-dark">
