Process, Leave, Cancel, Bugs
Fixing the Process - Done
Leave Event - Done
Cancel Request - Done
Bugs in Leave Event, Cancel Request, Event Details and Participation - Done

--- a/Tabang-Hub/Tabang-Hub/Content/Css/CustomeStyle.css
+++ b/Tabang-Hub/Tabang-Hub/Content/Css/CustomeStyle.css
@@ -59,7 +59,8 @@
 .step-content {
     flex: 1;
     overflow-y: auto; /* Enable vertical scrolling */
-    padding-right: 10px; /* Add space for scrollbar */
+    /*padding-right: 10px;*/ /* Add space for scrollbar */
+    padding: 8px;
 }
 
 .grid-container {
@@ -98,7 +99,7 @@
     }
 
     .grid-item.selected {
-        border: 2px solid #0073e6;
+        box-shadow: 0 0 10px 3px rgb(62, 180, 244);
     }
 
 .step-footer {
@@ -150,6 +151,7 @@
     max-height: 60vh; /* Adjust based on your preference */
     overflow-y: auto; /* Enable vertical scrolling */
     padding-right: 10px; /* Add space for scrollbar */
+    padding-top: 5px;
 }
 
 .btn-container {
