--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -187,13 +187,13 @@
                     <label id="counter">Volunteer counter</label>
                     <div class="progress">
                         @{
-                            double? Vol = Model.volunteers.Count();
+                            double? Vol = Model.volunteers.Where(m => m.Status == 1).Count();
 
                             Vol = (Vol / location.Maximum_Volunteer) * location.Maximum_Volunteer;
                             Console.Write(Vol);
                         }
                         <div class="progress-bar" role="progressbar" style="width: @Html.Raw(Vol)%;" aria-valuenow="@location.Maximum_Volunteer" aria-valuemin="0" aria-valuemax="100"></div>
-                        <div class="progress-label">@Model.volunteers.Count()/@location.Maximum_Volunteer</div>
+                        <div class="progress-label">@Model.volunteers.Where(m => m.Status == 1).Count()/@location.Maximum_Volunteer</div>
                     </div>
                 }
                 <hr />
