--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/GeneralSkill.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/GeneralSkill.cshtml
@@ -7,37 +7,39 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
 <link href="~/Content/Css/generalskill.css" rel="stylesheet" />
 
+<h2>GeneralSkill</h2>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         @foreach (var evnt in Model.listOfEvents)
         {
-            if (evnt.Event_Type == 1)
+            if (evnt.Target_Amount == null)
             {
                 <div class="col-11 col-sm-5 col-md-5 col-lg-3 mb-3 d-flex">
                     <div class="card" data-id="@evnt.Event_Id" style="width: 100%; cursor: pointer;" onclick="redirectToDetails(@evnt.Event_Id)">
                         @*@foreach (var pic in Model.detailsEventImage)
-                        {
-                            if (evnt.Event_Id == pic.eventId)
                             {
-                                <img src="~/Content/IdPicture/@pic.eventImage" class="card-img-top" alt="">
-                            }
-                        }*@
+                                if (evnt.Event_Id == pic.eventId)
+                                {
+                                    <img src="~/Content/IdPicture/@pic.eventImage" class="card-img-top" alt="">
+                                }
+                            }*@
                         <img src="~/Content/images/tabanghub3.png" class="card-img-top" alt="" />
 
                         <div class="card-body">
-                            <h5 style="font-size: larger" class="card-title">@evnt.Event_Title</h5>
-                            <p class="card-text">@evnt.Event_Description</p>
+                            <h5 style="font-size: larger" class="card-title">@evnt.Event_Name</h5>
+                            <p class="card-text">@evnt.Description</p>
                             <hr />
                             <span>
                                 <i class="bi bi-geo-alt" style="font-size:24px;"></i> @evnt.Location
                             </span>
                             <span>
                                 <i class="bi bi-calendar" style="font-size:16px;"></i>
-                                <span>@evnt.Date_Started <strong>-</strong></span>
-                                <span style="margin-left: 20px;">@evnt.Date_Ended</span>
+                                <span>@evnt.Start_Date <strong>-</strong></span>
+                                <span style="margin-left: 20px;">@evnt.End_Date</span>
                             </span>
                             <span>
-                                <i class="bi bi-building" style="font-size:16px;"></i> @evnt.Event_Title
+                                <i class="bi bi-building" style="font-size:16px;"></i> @evnt.Event_Name
                             </span>
 
                             <span>
@@ -61,28 +63,28 @@
                 <div class="col-11 col-sm-5 col-md-5 col-lg-3 mb-3 d-flex">
                     <div class="card" data-id="@evnt.Event_Id" style="width: 100%; cursor: pointer;" onclick="redirectToDonationDetails(@evnt.Event_Id)">
                         @*@foreach (var pic in Model.detailsEventImage)
-                        {
-                            if (evnt.Event_Id == pic.eventId)
                             {
-                                <img src="~/Content/IdPicture/@pic.eventImage" class="card-img-top" alt="">
-                            }
-                        }*@
+                                if (evnt.Event_Id == pic.eventId)
+                                {
+                                    <img src="~/Content/IdPicture/@pic.eventImage" class="card-img-top" alt="">
+                                }
+                            }*@
                         <img src="~/Content/images/tabanghub3.png" class="card-img-top" alt="" />
 
                         <div class="card-body">
-                            <h5 style="font-size: larger" class="card-title">@evnt.Event_Title</h5>
-                            <p class="card-text">@evnt.Event_Description</p>
+                            <h5 style="font-size: larger" class="card-title">@evnt.Event_Name</h5>
+                            <p class="card-text">@evnt.Description</p>
                             <hr />
                             <span>
                                 <i class="bi bi-geo-alt" style="font-size:24px;"></i> @evnt.Location
                             </span>
                             <span>
                                 <i class="bi bi-calendar" style="font-size:16px;"></i>
-                                <span>@evnt.Date_Started <strong>-</strong></span>
-                                <span style="margin-left: 20px;">@evnt.Date_Ended</span>
+                                <span>@evnt.Start_Date <strong>-</strong></span>
+                                <span style="margin-left: 20px;">@evnt.End_Date</span>
                             </span>
                             <span>
-                                <i class="bi bi-building" style="font-size:16px;"></i> @evnt.Event_Title
+                                <i class="bi bi-building" style="font-size:16px;"></i> @evnt.Event_Name
                             </span>
 
                             <span>
