--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -27,16 +27,16 @@
             <div class="collapse navbar-collapse" id="main-nav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link"  href="#dashboard" onclick="showSection('dashboard')">Dashboard</a>
+                        <a class="nav-link" href="~/Organization/Index">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#event-creation" onclick="showSection('event-creation')">Create Event</a>
+                        <a class="nav-link" href="~/Organization/EventsList">Event List</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#event-list" onclick="showSection('event-list')">Event List</a>
+                        <a class="nav-link" href="#">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#scheduling-calendar" onclick="showSection('scheduling-calendar')">Reports/History</a>
+                        <a class="nav-link" href="#">Reports</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -59,5 +59,7 @@
     @RenderBody()
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
