--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/DonationDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/DonationDetails.cshtml
@@ -115,10 +115,10 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><i class="bi bi-calendar-event me-2"></i><strong>Event Name:</strong> @Model.eventDetails.Event_Title</li>
-                        <li class="list-group-item"><i class="bi bi-file-earmark-text me-2"></i><strong>Description:</strong> @Model.eventDetails.Event_Description</li>
-                        <li class="list-group-item"><i class="bi bi-calendar me-2"></i><strong>Date Started:</strong> @Model.eventDetails.Date_Started</li>
-                        <li class="list-group-item"><i class="bi bi-calendar me-2"></i><strong>Date Ended:</strong> @Model.eventDetails.Date_Ended</li>
+                        <li class="list-group-item"><i class="bi bi-calendar-event me-2"></i><strong>Event Name:</strong> @Model.eventDetails.Event_Name</li>
+                        <li class="list-group-item"><i class="bi bi-file-earmark-text me-2"></i><strong>Description:</strong> @Model.eventDetails.Description</li>
+                        <li class="list-group-item"><i class="bi bi-calendar me-2"></i><strong>Date Started:</strong> @Model.eventDetails.Start_Date</li>
+                        <li class="list-group-item"><i class="bi bi-calendar me-2"></i><strong>Date Ended:</strong> @Model.eventDetails.End_Date</li>
                         <li class="list-group-item"><i class="bi bi-geo-alt me-2"></i><strong>Location:</strong> @Model.eventDetails.Location</li>
                     </ul>
                 </div>
