--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
@@ -9,6 +9,8 @@
     <title>Organization Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
 
@@ -27,13 +29,13 @@
             <div class="collapse navbar-collapse" id="main-nav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Organization/Index">Dashboard</a>
+                        <a class="nav-link" href="~/Admin/Index">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Organization/EventsList">Volunteer Accounts</a>
+                        <a class="nav-link" href="~/Admin/VolunteerAccounts">Volunteer Accounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Organization Accounts</a>
+                        <a class="nav-link" href="~/Admin/OrganizationAccounts">Organization Accounts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Reports</a>
