--- a/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
@@ -10,34 +10,75 @@
         <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#createAccountModal">Create Account</button>
         <input type="text" class="form-control w-25" placeholder="Search" />
     </div>
-    <div class="table-responsive border rounded p-2">
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
-                <tr class="text-nowrap text-center">
-                    <th class="small">Org. Name</th>
-                    <th class="small">Email</th>
-                    <th class="small">Org. Type</th>
-                    <th class="small">Contact No.</th>
-                    <th class="small">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var list in Model.organizationAccounts)
-                {
-                    <tr class="text-center organization-row" data-org-id="@list.User_Id" style="cursor: pointer;">
-                        <td>@list.Org_Name</td>
-                        <td>@list.Email</td>
-                        <td>@list.Org_Type</td>
-                        <td>@list.Contact_No</td>
-                        <td>
-                            <button type="button" class="btn btn-sm btn-danger delete-button" data-org-id="@list.User_Id">Delete</button>
-                        </td>
+    <div class="active-accounts">
+        <h5 class="text-start">Active Accounts</h5>
+        <div class="table-responsive border rounded p-2 mb-5">
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr class="text-nowrap text-center">
+                        <th class="small">Org. Name</th>
+                        <th class="small">Email</th>
+                        <th class="small">Org. Type</th>
+                        <th class="small">Contact No.</th>
+                        <th class="small">Action</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var list in Model.organizationAccounts)
+                    {
+                        if (list.Status == 1)
+                        {
+                            <tr class="text-center organization-row" data-org-id="@list.User_Id" style="cursor: pointer;">
+                                <td>@list.Org_Name</td>
+                                <td>@list.Email</td>
+                                <td>@list.Org_Type</td>
+                                <td>@list.Contact_No</td>
+                                <td>
+                                    <button type="button" class="btn btn-sm btn-danger delete-button" data-org-id="@list.User_Id">Delete</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
+    
+    <div class="not-active-accounts">
+        <h5 class="text-start">Not Active Accounts</h5>
+        <div class="table-responsive border rounded p-2">
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
+                    <tr class="text-nowrap text-center">
+                        <th class="small">Org. Name</th>
+                        <th class="small">Email</th>
+                        <th class="small">Org. Type</th>
+                        <th class="small">Contact No.</th>
+                        <th class="small">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var list in Model.organizationAccounts)
+                    {
+                        if (list.Status == 0)
+                        {
+                            <tr class="text-center organization-row" data-org-id="@list.User_Id" style="cursor: pointer;">
+                                <td>@list.Org_Name</td>
+                                <td>@list.Email</td>
+                                <td>@list.Org_Type</td>
+                                <td>@list.Contact_No</td>
+                                <td>
+                                    <button type="button" class="btn btn-sm btn-danger delete-button" data-org-id="@list.User_Id">Delete</button>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    </div>
 
 <div class="modal fade" id="createAccountModal" tabindex="-1" aria-labelledby="createAccountModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -47,19 +88,19 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/Admin/Register" method="post" enctype="multipart/form-data" class="form-horizontal">
+                <form action="@Url.Action("RegisterOrg", "Admin")" method="post" enctype="multipart/form-data" class="form-horizontal">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email Address</label>
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your Email" required>
+                            <input type="email" class="form-control" id="email" name="Email" placeholder="Enter Your Email" required>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                            <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
+                            <input type="password" class="form-control" id="password" name="Password" placeholder="Enter Password" required>
                         </div>
                     </div>
                     <div class="mb-3">
@@ -81,7 +122,7 @@
                     </div>
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-danger" type="submit">Register</button>
-                    </div>                    
+                    </div>
                 </form>
             </div>
         </div>
@@ -95,48 +136,7 @@
         $('.organization-row').click(function () {
             var orgId = $(this).data('org-id');
             window.location.href = '@Url.Action("OrgDetails", "Admin")' + '?orgId=' + orgId;
-        });
-
-        // Prevent row click when delete button is clicked
-        $('.delete-button').click(function (event) {
-            event.stopPropagation();
-            var orgId = $(this).data('org-id');
-
-            Swal.fire({
-                title: 'Are you sure?',
-                text: "You won't be able to revert this!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, delete it!'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        url: '@Url.Action("DeleteOrg", "Admin")',
-                        type: 'POST',
-                        data: { orgId: orgId },
-                        success: function(response) {
-                            Swal.fire(
-                                'Deleted!',
-                                'The account has been deleted.',
-                                'success'
-                            ).then(() => {
-                                location.reload(); // Reload the page to update the table
-                            });
-                        },
-                        error: function(xhr, status, error) {
-                            Swal.fire(
-                                'Error!',
-                                'There was an error deleting the account.',
-                                'error'
-                            );
-                        }
-                    });
-                }
-            });
-        });
-    });
+        });        
 
     function previewImage(event, previewId) {
         var reader = new FileReader();
