--- a/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
@@ -16,7 +16,7 @@
                         <div class="col-md-8">
                             <h2>Register Organization</h2>
                             <p>Fill in the details to create organization.</p>
-                            <form action="#" method="post" enctype="multipart/form-data">
+                            <form action="~/Page/RegisterOrg" method="post" enctype="multipart/form-data">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email Address</label>
                                     <div class="input-group">
