--- a/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
@@ -136,7 +136,47 @@
         $('.organization-row').click(function () {
             var orgId = $(this).data('org-id');
             window.location.href = '@Url.Action("OrgDetails", "Admin")' + '?orgId=' + orgId;
-        });        
+        });
+
+            $('.delete-button').click(function (event) {
+        event.stopPropagation();
+        var userId = $(this).data('user-id');
+
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url: '@Url.Action("DeleteOrg", "Admin")',
+                    type: 'POST',
+                    data: { userId: userId },
+                    success: function(response) {
+                        Swal.fire(
+                            'Deleted!',
+                            'The account has been deleted.',
+                            'success'
+                        ).then(() => {
+                            location.reload(); // Reload the page to update the table
+                        });
+                    },
+                    error: function(xhr, status, error) {
+                        Swal.fire(
+                            'Error!',
+                            'There was an error deleting the account.',
+                            'error'
+                        );
+                    }
+                });
+            }
+        });
+    });
+});
 
     function previewImage(event, previewId) {
         var reader = new FileReader();
