--- a/Tabang-Hub/Tabang-Hub/Views/Organization/EventsList.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/EventsList.cshtml
@@ -139,11 +139,10 @@
                         <span class="error" id="CreateEvents_skills_error"></span>
                     </div>
                     <div class="skills-container">
-                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Mason')">Mason</button>
-                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Panday')">Panday</button>
-                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('GRO')">GRO</button>
-                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Mangawatay')">Mangawatay</button>
-                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Matcho Dancer')">Matcho Dancer</button>
+                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Carpentry')">Carpentry</button>
+                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Cooking')">Cooking</button>
+                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Painting')">Painting</button>
+                        <button type="button" class="btn btn-outline-primary skill-button" onclick="addSkill('Wood Crafting')">Wood Crafting</button>
                     </div>
                     <div class="mb-3">
                         <label for="CreateEvents_uploadImage" class="form-label">Upload Images</label>
