Allow unli volunteers og view orga profile admin side
Allow unli volunteers og view orga profile admin side

--- a/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
@@ -16,6 +16,12 @@
                         <div class="col-md-8">
                             <h2>Register Organization</h2>
                             <p>Fill in the details to create organization.</p>
+                            @if (TempData["ErrorMessage"] != null)
+                            {
+                                <div class="alert alert-danger">
+                                    @TempData["ErrorMessage"]
+                                </div>
+                            }
                             <form action="~/Page/RegisterOrg" method="post" enctype="multipart/form-data">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email Address</label>
