--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -148,7 +148,7 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#">
+                                        <a class="dropdown-item" href="~/Page/Logout">
                                             <i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout
                                         </a>
                                     </li>
