--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -34,7 +34,7 @@
     }
 
     .event-details {
-        margin-top: 20px;
+        margin: 18px 0px 18px 0px;
     }
 
     .org-description {
@@ -115,7 +115,7 @@
             }
         </div>
         <hr />
-        <div class="row">
+        <div class="row" style="background-color: #F0F8FF; margin: 0">
             @*<div class="col-md-8">
                     <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
                         <div class="carousel-inner">
@@ -149,7 +149,7 @@
                         @for (int i = 0; i < Model.detailsEventImage.Count; i++)
                         {
                             <div class="carousel-item @(i == 0 ? "active" : "")">
-                                <img src="@Url.Content("~/Content/IdPicture/" + Model.detailsEventImage[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img border border-primary" alt="Event Image">
+                                <img src="@Url.Content("~/Content/IdPicture/" + Model.detailsEventImage[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img" alt="Event Image" style="border-radius: 1rem; margin: 15px 0px 15px 0px;">
                             </div>
                         }
                     </div>
@@ -163,16 +163,16 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-4 event-details">
+            <div class="col-md-4 event-details" style="border-radius: 1rem; background-color: #FFFF">
                 @foreach (var location in Model.listOfEvents)
                 {
                     <i class="bi bi-geo-alt" style="font-size:24px;"></i> @location.Location
 
                     <div class="skills-required">
-                        <h4>Skills Required</h4>
+                        <h5>Skills Required</h5>
                         @foreach (var rk in Model.detailsSkillRequirement)
                         {
-                            <span id="badge" class="badge badge-secondary skill-badge">
+                            <span style="background-color: mediumseagreen" id="badge" class="badge badge-secondary skill-badge">
                                 @rk.skillName
                             </span>
                         }
@@ -199,7 +199,7 @@
                 <hr />
 
 
-                <div class="apply-button mt-3">
+                <div class="apply-button mt-2">
                     @foreach (var orgDetails in Model.orgEvents)
                     {
                         <button onclick="applyEvent('@orgDetails.eventId')" class="btn btn-primary btn-block">
@@ -207,6 +207,7 @@
                         </button>
                     }
                 </div>
+                <br />
             </div>
         </div>
     </div>
@@ -254,7 +255,7 @@
     </div>
 </div>
 
-<div class="similar-opportunities-container">
+<div class="similar-opportunities-container" style="background-color: #F0F8FF;">
     <div class="header">
         <h2>Be Involved</h2>
         @*<a href="#" class="see-all">See all</a>*@
@@ -268,9 +269,9 @@
             @foreach (var lstEvent in Model.orgOtherEvent)
             {
                 <div class="opportunity-card">
-                    <img src="~/Content/images/tabanghub3.png" alt="Tech Systems Set Up">
+                    <img src="~/Content/images/tabanghub3.png" alt="">
                     <div class="card-content">
-                        <p>PROJECT | 6-7 WEEKS</p>
+                        @*<p>PROJECT | 6-7 WEEKS</p>*@
                         <h3 class="card-title">@lstEvent.Event_Title</h3>
                         <p class="card-text">@lstEvent.Event_Description</p>
                     </div>
