--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/Participate.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/Participate.cshtml
@@ -161,9 +161,9 @@
 
     function LeaveBtn(eventId) {
         Swal.fire({
-            title: 'Confirm Leave',
-            text: 'Are you sure you want to leave this event?',
-            icon: 'info',
+            title: 'Are you sure you want to leave this event?',
+            text: '',
+            icon: 'warning',
             showCancelButton: true,
             confirmButtonText: 'Yes',
             cancelButtonText: 'No'
@@ -202,7 +202,7 @@
         Swal.fire({
             title: 'Confirm Cancel',
             text: 'Are you sure you want to cancel this request?',
-            icon: 'info',
+            icon: 'warning',
             showCancelButton: true,
             confirmButtonText: 'Yes',
             cancelButtonText: 'No'
